cli/tests/testdata/run/internal_dynamic_import.ts.out
error: Uncaught (in promise) TypeError: Cannot load internal module from external code
await import("internal:core/01_core.js");
^
    at async [WILDCARD]
